--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-purge-css-modules": "^2.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
