--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-auto-scroll": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.2.10",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -32,6 +34,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
